Sorted fixed width issues for academic icons

--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -16,8 +16,8 @@
   {% if author.twitter %}<a href="http://twitter.com/{{ author.twitter }}" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a>{% endif %}
   {% if author.facebook %}<a href="http://facebook.com/{{ author.facebook }}" class="author-social" target="_blank"><i class="fa fa-fw fa-facebook-square"></i> Facebook</a>{% endif %}
   {% if author.linkedin %}<a href="http://linkedin.com/in/{{ author.linkedin }}" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a>{% endif %}
-  {% if author.google_scholar %}<a href="http://scholar.google.com/citations?user={{ author.google_scholar }}" class="author-social" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a>{% endif %}
-  {% if author.orcid %}<a href="http://orcid.org/{{ author.orcid }}" class="author-social" target="_blank"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a>{% endif %}
+  {% if author.google_scholar %}<a href="http://scholar.google.com/citations?user={{ author.google_scholar }}" class="author-social" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i>&nbsp;&nbsp;Scholar</a>{% endif %}
+  {% if author.orcid %}<a href="http://orcid.org/{{ author.orcid }}" class="author-social" target="_blank"><i class="ai fa-fw ai-orcid-square"></i>&nbsp;&nbsp;ORCID</a>{% endif %}
   {% if author.google.plus %}<a href="http://plus.google.com/+{{ author.google.plus }}" class="author-social" target="_blank"><i class="fa fa-fw fa-google-plus-square"></i> Google+</a>{% endif %}
   {% if author.xing %}<a href="http://www.xing.com/profile/{{ author.xing }}" class="author-social" target="_blank"><i class="fa fa-fw fa-xing-square"></i> XING</a>{% endif %}
   {% if author.instagram %}<a href="http://instagram.com/{{ author.instagram }}" class="author-social" target="_blank"><i class="fa fa-fw fa-instagram"></i> Instagram</a>{% endif %}
